src/objects/MMR_Client_Investment_Association__c.object
<CustomObject>
    <fields>
        <fullName>Client_Investment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Investment</label>
        <referenceTo>Account__c</referenceTo>
        <relationshipName>MMR_Client_Investment_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Material_Request__c</fullName>
        <label>Meeting Material Request</label>
        <referenceTo>Meeting_Material_Request__c</referenceTo>
        <relationshipName>MMR_Client_Investment_Association</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Portfolio_Code__c</fullName>
        <formula>Client_Investment__r.Portfolio_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>MMR_Client_Investment_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MMR Portfolio Association</label>
    <nameField>
        <label>MMR Portfolio Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMR Portfolio Association</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>